@@ -112,7 +112,6 @@ bool wxGUIEventLoop::Dispatch()
 {
     wxCHECK_MSG( IsRunning(), false, _T("can't call Dispatch() if not running") );
 
-    gtk_main_iteration();
-
-    return true;
+    // gtk_main_iteration() returns TRUE only if gtk_main_quit() was called
+    return !gtk_main_iteration();
 }
